[gd_scene load_steps=2 format=3 uid="uid://dbuhdio2463k6"]

[ext_resource type="Script" path="res://scenes/godot-version-manager/godot-version-manager.gd" id="1_6trj8"]

[node name="GodotVersionManager" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.431373, 0.431373, 0.431373, 1)
script = ExtResource("1_6trj8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Version Manager"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GodotVersionItemContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_horizontal = 8

[node name="NewVersionButton" type="Button" parent="VBoxContainer/HBoxContainer/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "New Version"

[node name="EditButton" type="Button" parent="VBoxContainer/HBoxContainer/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "Edit Version"

[node name="RemoveButton" type="Button" parent="VBoxContainer/HBoxContainer/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "Remove Version"

[node name="CloseButton" type="Button" parent="VBoxContainer/HBoxContainer/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "Close"

[node name="DeleteConfirmationDialog" type="ConfirmationDialog" parent="."]
position = Vector2i(300, 250)
size = Vector2i(600, 135)
dialog_text = " Are you sure you want to delete this Godot Version configuration?"
dialog_autowrap = true

[node name="DeleteUsedVersionConfirmationDialog" type="ConfirmationDialog" parent="."]
position = Vector2i(300, 150)
size = Vector2i(700, 161)
ok_button_text = "Delete"
dialog_text = "The version configuration you're about to delete is being used by one or more projects. Are you sure you want to remove it? "
dialog_autowrap = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer/MarginContainer2/VBoxContainer/NewVersionButton" to="." method="_on_new_project_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/MarginContainer2/VBoxContainer/EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/MarginContainer2/VBoxContainer/RemoveButton" to="." method="_on_remove_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/MarginContainer2/VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="confirmed" from="DeleteConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
[connection signal="confirmed" from="DeleteUsedVersionConfirmationDialog" to="." method="_on_delete_used_version_confirmation_dialog_confirmed"]
